<resources>
    <string name="app_name">PixelCodex</string>
    <string name="applogo">App Logo</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="todo">TODO</string>
    <string name="discord_client_id">1366507120278896812</string>
    <string name="discord_client_secret">-HN4Hw63ohB9F1QI9igoMRSAPShiuEAQ</string>
    <string name="discord_redirect_url">http://pixelcodex://auth</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? SIGN UP</string>
    <string name="steam_login">Steam Login</string>
    <string name="google_login">Google Login</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="sign_in">SIGN IN</string>
    <string name="default_web_client_id">480020180531-5tjksengh6utc28g42redaroekp0in5n.apps.googleusercontent.com</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="create_your_account">Create Your Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_up_with">Or Sign Up With</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="new_on_codex">NEW ON CODEX</string>
    <string name="featured_game">Featured Game</string>
    <string name="cart">Cart</string>
    <string name="todo2">TODO</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="todo3">TODO</string>
    <string name="elden_ring">Elden Ring</string>
    <string name="game_title">Game Title</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="news" />
    <string name="hamburger">hamburger</string>
    <string name="log_out">Log Out</string>
    <string name="gift_a_game">Gift A Game</string>
    <string name="favorites">Favorites</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="shop_history">Shop History</string>
    <string name="avatar">avatar</string>
    <string name="friends">Friends</string>
    <string name="back_button">back_button</string>
    <string name="settings">settings</string>
    <string name="privacy_policy">privacy_policy</string>
    <string name="contact_support">support</string>
    <string name="about_us">aboutus</string>
    <string name="notifications">Enable Notifications</string>
    <string name="game_image">game image</string>
    <string name="request_a_game">Request a Game</string>
    <string name="game_requests">Game Requests</string>
    <string name="search_games">Search games...</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="platform">Platform</string>
    <string name="game_description">Game Description</string>
</resources>