<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home4"
        android:iconTintMode="src_in"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search3"
        android:iconTintMode="src_in"
        android:title="@string/search" />

    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/add3"
        android:iconTintMode="src_in"
        android:title="@string/add" />

    <item
        android:id="@+id/nav_plus"
        android:icon="@drawable/news2"
        android:iconTintMode="src_in"
        android:title="news"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile2"
        android:iconTintMode="src_in"
        android:title="@string/profile" />

</menu>
