<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_wishlist"
        android:icon="@drawable/favorite2"
        android:iconTintMode="src_in"
        android:title="@string/favorites" />

    <item
        android:id="@+id/nav_game_request"
        android:icon="@drawable/request"
        android:iconTintMode="src_in"
        android:title="@string/game_requests" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settings"
        android:iconTintMode="src_in"
        android:title="Settings" />

    <item
        android:id="@+id/nav_about_us"
        android:icon="@drawable/aboutus"
        android:iconTintMode="src_in"
        android:title="About us" />

    <item
        android:id="@+id/contact_support"
        android:icon="@drawable/support"
        android:iconTintMode="src_in"
        android:title="Support" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout2"
        android:iconTintMode="src_in"
        android:title="@string/log_out" /> <!-- Red color for the logout icon -->
</menu>
