<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/adminLoginLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#102020"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:padding="20dp"
    tools:context=".AdminLoginActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/applogo"
        android:contentDescription="@string/applogo" />

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Admin Login"
        android:textColor="#c7d5e0"
        android:textSize="20sp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold" />

    <!-- Email Field -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_borders_textfield"
        android:padding="12dp"
        android:layout_marginBottom="12dp">

        <ImageView
            android:id="@+id/emailIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/todo"
            android:src="@drawable/email" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:paddingStart="8dp"
            android:textColorHint="#1B2838"
            tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />
    </LinearLayout>

    <!-- Password Field -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_borders_textfield"
        android:padding="12dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/passwordIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/todo2"
            android:src="@drawable/password" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:paddingStart="8dp"
            android:textColorHint="#1B2838"
            tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />
    </LinearLayout>

    <!-- Sign In Button -->
    <Button
        android:id="@+id/signInButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="#283593"
        android:text="@string/sign_in"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />


    <!-- Divider -->
    <View
        android:layout_width="270dp"
        android:layout_height="1dp"
        android:background="#9CAAB4"
        android:layout_marginBottom="30dp" />

    <!-- Sign In as User Button -->
    <Button
        android:id="@+id/BackToUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Back to User Login"
        android:textColor="#F5E6CA"
        android:background="@android:color/transparent"/>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loaderAnimation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:lottie_rawRes="@raw/game1"
        app:lottie_loop="true"
        android:visibility="gone"
        app:lottie_autoPlay="false" />
</LinearLayout>