<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#102020">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update Game Request"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:boxBackgroundColor="#F5E6CA"
        app:boxStrokeColor="#81B3A9"
        app:boxStrokeWidth="1dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_game_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Game Title"
            android:textColor="#212121"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:boxBackgroundColor="#F5E6CA"
        app:boxStrokeColor="#81B3A9"
        app:boxStrokeWidth="1dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_game_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/game_description"
            android:textColor="#212121"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:boxBackgroundColor="#F5E6CA"
        app:boxStrokeColor="#81B3A9"
        app:boxStrokeWidth="1dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:endIconMode="dropdown_menu">

        <AutoCompleteTextView
            android:id="@+id/edit_game_platform"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/platform"
            android:textColor="#212121"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:backgroundTint="#283593"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textColor="@color/white"
            android:backgroundTint="#FF6666"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>